added more tabs to the index.html file, completed MVP

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
       <div data-tab="all" class="tab active-tab">ALL</div>
       <div data-tab="javascript" class="tab">JAVASCRIPT</div>
       <div data-tab="technology" class="tab">TECHNOLOGY</div>
+      <div data-tab="html" class="tab">HTML</div>
       <div data-tab="node" class="tab">NODE.JS</div>
       <div data-tab="jquery" class="tab">jQUERY</div>
       <div data-tab="bootstrap" class="tab">BOOTSTRAP</div>
+      <div data-tab="css" class="tab">CSS</div>
     </div>
   </div>
 
@@ -63,6 +65,16 @@
   <div class="cards-container">
 
     <!-- CARD COMPONENTS -->
+    <div class="card" data-tab="html">
+      <div class="headline">OH WHERE WOULD WE BE WITHOUT HTML, ITS A NECESSITY!!!!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
+
     <div class="card" data-tab="javascript">
       <div class="headline">ES8: The Next Step in the Evolution of Javascript and What it Means For Your Projects</div>
       <div class="author">
@@ -75,6 +87,16 @@
 
     <div class="card" data-tab="javascript">
       <div class="headline">Type Coercion: Why Does NaN !== NaN? and Other Strange Occurrences</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By BONES R. LIFE</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="css">
+      <div class="headline">CSS IS FUN, BUT ITS NOTHING WITHOUT HTML!!!!</div>
       <div class="author">
         <div class="img-container">
           <img src="./assets/bones.jpg" />
@@ -112,6 +134,16 @@
         <span>By PUPPER S. DOGGO</span>
       </div>
     </div>
+    
+    <div class="card" data-tab="html">
+      <div class="headline">HTML NEEDS IT'S FRIENDS AND ITS FRENDS NEED IT!!!!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By BONES R. LIFE</span>
+      </div>
+    </div>
 
     <div class="card" data-tab="bootstrap">
       <div class="headline">UI Frameworks: A Comparison, Which Made Our List? (Hint: Bootstrap is on it)</div>
@@ -143,6 +175,16 @@
       </div>
     </div>
 
+    <div class="card" data-tab="css">
+      <div class="headline">CSS IS USELESS WITHOUT IT'S SIDE KICK HTML!!! IF A WEB PAGE WAS A CAR, HTML IS THE CAR FRAME, CSS IS EVERYTHING THAT MAKES IT LOOK PRETTY!!!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By BONES R. LIFE</span>
+      </div>
+    </div>
+
     <div class="card" data-tab="jquery">
       <div class="headline">jQuery Animations: When and Where to Use Them, and Not CSS</div>
       <div class="author">
@@ -153,6 +195,16 @@
       </div>
     </div>
 
+    <div class="card" data-tab="html">
+      <div class="headline">HTML IS OKAY BUT ITS LONELY PLAIN AND BORING, BY IT'SELF!!!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By BONES R. LIFE</span>
+      </div>
+    </div>
+
     <div class="card" data-tab="technology">
       <div class="headline">AR or VR: How We Will See the World Through a Digital Lense</div>
       <div class="author">
@@ -160,6 +212,16 @@
           <img src="./assets/max.jpg" />
         </div>
         <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="css">
+      <div class="headline">HTML + CSS + JAVASCRIPT IS EVEN BETTER, JAVASCRIPT MAKES THE CAR GO VROOOOM!!!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By BONES R. LIFE</span>
       </div>
     </div>
 
